# hrsterm

./: README.md  cade_experiments.sh  cade_experiments_other_tools.sh  cade_experiments_other_tools_results.txt  cade_experiments_results.txt  hrsterm.cabal  wanda_full_experiments.sh  wanda_full_results.txt  wst_experiments.sh  wst_experiments_results.txt
app/: Main.hs
examples/: aotoyamada_05__014.p  applicative_treeflatten.p  diff.p  diff2.p  map_inc.p  pad.p
examples/other_formats/: applicative_treeflatten.afsm  applicative_treeflatten.trs  brouwerord.afsm  brouwerord.trs  diff2.afsm  diff2.trs  hofmann.afsm  hofmann.trs  map.afsm  map.trs  map_inc.afsm  map_inc.trs  neutr.afsm  neutr.trs  neutrN.afsm  neutrN.trs  nnf.afsm  nnf.trs  pad.afsm  pad.trs  pnf.afsm  pnf.trs  sdu.afsm  sdu.trs
examples/other_formats/lnf/: applicative_treeflatten.afsm  brouwerord.afsm  diff2_base.afsm  hofmann.afsm  map_inc.afsm  neutr.afsm  neutrN.afsm  nnf.afsm  pad.afsm  pnf.afsm  sdu.afsm
src/: ATerm.hs  Equation.hs  Term.hs  Typ.hs  Utils.hs
src/ATerm/: BetaEta.hs  Ops.hs  Type.hs
src/Equation/: Ops.hs  Parse.hs  Type.hs
src/TPTP/: Parse.hs
src/Term/: BetaEta.hs  Ops.hs  Parse.hs  Type.hs
src/Termination/: NCPO.hs  NHORPO.hs
src/Termination/NCPO/: Ordering.hs  OrderingLnf.hs  Solver.hs  Type.hs
src/Termination/NHORPO/: Neutralization.hs  Ordering.hs  Solver.hs  Type.hs
src/Typ/: Ops.hs  Parse.hs  Type.hs
src/Utils/: FreshMonad.hs  InputProcessing.hs  Parse.hs  Pretty.hs  RPO.hs  SMT.hs  Type.hs
